fix: fix css letter-spacing values

--- a/christmas-shop/css/style.css
+++ b/christmas-shop/css/style.css
@@ -56,7 +56,7 @@ body {
   font-size: 2rem;
   font-weight: 600;
   line-height: 150%;
-  letter-spacing: 18%;
+  letter-spacing: 0.18em;
   text-transform: uppercase;
 }
 
@@ -64,7 +64,7 @@ body {
   font-size: 1.5rem;
   font-weight: 600;
   line-height: 152%;
-  letter-spacing: 16%;
+  letter-spacing: 0.16em;
   text-transform: uppercase;
 }
 
@@ -72,7 +72,7 @@ body {
   font-size: 1rem;
   font-weight: 600;
   line-height: 152%;
-  letter-spacing: 8%;
+  letter-spacing: 0.08em;
   text-transform: uppercase;
 }
 
@@ -80,7 +80,7 @@ body {
   font-size: 0.75rem;
   font-weight: 600;
   line-height: 130%;
-  letter-spacing: 5%;
+  letter-spacing: 0.05em;
   text-transform: uppercase;
 }
 
@@ -89,7 +89,7 @@ body {
   font-size: 1.5rem;
   font-weight: 400;
   line-height: 100%;
-  letter-spacing: 5%;
+  letter-spacing: 0.05em;
 }
 
 .slider-text {
